# research

./: README.md  pyproject.toml
src/deep_research_ollama/: __main__.py  citations.py  cli.py  config.py  constitution.py  gui.py  llm.py  models.py  ollama.py  pipeline.py  program.py  prompts.py  providers.py  schemas.py  tools.py
tests/: test_citations.py  test_constitution.py  test_gui.py  test_llm.py  test_ollama.py  test_pipeline.py  test_providers.py  test_tools.py
